text-align fix

--- a/.docker-config/node/src/components/shared/userSnippet/userSnippet.scss
+++ b/.docker-config/node/src/components/shared/userSnippet/userSnippet.scss
@@ -16,5 +16,6 @@
 
     &__username {
         color: $mainTeal;
+        text-align: left;
     }
 }
